# tinyecs

./: .clang-format  .clang-tidy  CMakeLists.txt  LICENSE  example.cpp  iwyu.imp  tinyecs.cmake
.github/workflows/: build.yml  linting.yml  test.yml
benchmarks/: CMakeLists.txt  dummy_components.hpp  entt.cpp  flecs.cpp  tinyecs.cpp
ecs/: archetype.hpp  component.hpp  ecs.hpp  macros.hpp  meta.hpp  signature.hpp  small_vector.hpp  type_info.hpp  types.hpp  view.hpp
samples/: CMakeLists.txt
samples/bouncing/: CMakeLists.txt  main.cpp
samples/common/: gl.h  graphics.hpp
samples/nbody/: CMakeLists.txt  main.cpp
samples/reflection/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  type_info.cpp  world.cpp
tests/: CMakeLists.txt  common.hpp  small_vector.cpp  type_info.cpp  world.cpp
tinyecs/: archetype.hpp  meta.hpp  reflection.hpp  signature.hpp  small_vector.hpp  tinyecs.hpp  world.hpp
